--- a/index.html
+++ b/index.html
@@ -50,6 +50,28 @@
       display: none !important;
     }
 
+    .text-section {
+      padding-top: 32px;
+      padding-bottom: 32px;
+    }
+
+    .text-section__title {
+      margin: 0;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 120%;
+      color: #515151;
+    }
+
+    .text-section__text {
+      margin: 0;
+      padding-top: 13px;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 200%;
+      color: #515151;
+    }
+
     @media (max-width: 620px) {
       .table-600 {
         width: 280px !important;
@@ -64,21 +86,16 @@
         width: 114px !important;
       }
 
-      .table-480 {
-        width: 240px !important;
-      }
-
-      .table-250,
-      .table-240 {
-        width: 240px !important;
-      }
-
       .hero-img {
         display: none !important;
       }
 
       .hero-img--mobile {
         display: block !important;
+      }
+
+      .table-520 {
+        width: 244px !important;
       }
     }
   </style>
@@ -94,20 +111,51 @@
 
         <table class="table-600" cellpadding="0" cellspacing="0" width="600">
           <tr>
-            <table cellpadding="0" cellspacing="0">
-              <tr>
-                <td class="header" align="center" bgcolor="#000000">
-                  <img src="https://gvidon94.ru/email/blanchard/logo.svg" alt="Logo">
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <img class="hero-img" src="https://gvidon94.ru/email/blanchard/hero.jpg" alt="Main art">
-                  <img class="hero-img--mobile" src="https://gvidon94.ru/email/blanchard/hero-mobile.jpg"
-                    alt="Main art">
-                </td>
-              </tr>
-            </table>
+            <td>
+              <table cellpadding="0" cellspacing="0">
+                <tr>
+                  <td class="header" align="center" bgcolor="#000000">
+                    <img src="https://gvidon94.ru/email/blanchard/logo.svg" alt="Logo">
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <img class="hero-img" src="https://gvidon94.ru/email/blanchard/hero.jpg" alt="Main art">
+                    <img class="hero-img--mobile" src="https://gvidon94.ru/email/blanchard/hero-mobile.jpg"
+                      alt="Main art">
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr>
+            <td class="text-section" align="center">
+              <table class="table-520" cellpadding="0" cellspacing="0" width="520">
+                <tr>
+                  <td>
+                    <h2 class="text-section__title" style="font-family: Arial, Helvetica, sans-serif;">
+                      Торжество импрессионизма
+                    </h2>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <p class="text-section__text" style="font-family: Arial, Helvetica, sans-serif;">
+                      Опыт говорит нам, что семантический разбор внешних противодействий требует анализа новых принципов
+                      формирования материально-технической и кадровой базы.
+                    </p>
+                    <p class="text-section__text" style="font-family: Arial, Helvetica, sans-serif;">
+                      Задача организации, в особенности же внедрение современных методик, в своём классическом
+                      представлении, допускает внедрение глубокомысленных рассуждений. Есть над чем задуматься: элементы
+                      политического процесса преданы социально-демократической анафеме! Но интерактивные прототипы
+                      заблокированы в рамках своих собственных рациональных ограничений. Сторонники тоталитаризма в
+                      науке ограничены исключительно образом мышления.
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
           </tr>
         </table>
 
