--- a/index.html
+++ b/index.html
@@ -72,6 +72,40 @@
       color: #515151;
     }
 
+    .gallery {
+      padding-top: 26px;
+      padding-bottom: 26px;
+    }
+
+    .gallery__title {
+      margin: 0;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+      color: #fff;
+    }
+
+    .card__img {
+      padding-top: 21px;
+      padding-bottom: 21px;
+    }
+
+    .card__title {
+      margin: 0;
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 200%;
+      color: #fff;
+    }
+
+    .card__descr {
+      margin: 0;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 150%;
+      color: #fff;
+    }
+
     @media (max-width: 620px) {
       .table-600 {
         width: 280px !important;
@@ -134,9 +168,9 @@
               <table class="table-520" cellpadding="0" cellspacing="0" width="520">
                 <tr>
                   <td>
-                    <h2 class="text-section__title" style="font-family: Arial, Helvetica, sans-serif;">
+                    <h1 class="text-section__title" style="font-family: Arial, Helvetica, sans-serif;">
                       Торжество импрессионизма
-                    </h2>
+                    </h1>
                   </td>
                 </tr>
                 <tr>
@@ -152,6 +186,155 @@
                       заблокированы в рамках своих собственных рациональных ограничений. Сторонники тоталитаризма в
                       науке ограничены исключительно образом мышления.
                     </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr>
+            <td class="gallery" align="center" bgcolor="#000000">
+              <table class="table-520" cellpadding="0" cellspacing="0" width="520">
+                <tr>
+                  <td>
+                    <h2 class="gallery__title" style="font-family: Arial, Helvetica, sans-serif;">
+                      Представленные художники
+                    </h2>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>
+                    <table class="card" cellpadding="0" cellspacing="0">
+                      <tr>
+                        <td class="card__img">
+                          <img src="https://gvidon94.ru/email/blanchard/art-1.jpg" alt="Поль Гоген">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <h3 class="card__title" style="font-family: Arial, Helvetica, sans-serif">
+                            Поль Гоген
+                          </h3>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="card__descr" style="font-family: Arial, Helvetica, sans-serif">
+                            Прежде всего, разбавленное изрядной долей эмпатии, рациональное мышление в значительной
+                            степени обусловливает важность укрепления моральных ценностей.
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>
+                    <table class="card" cellpadding="0" cellspacing="0">
+                      <tr>
+                        <td class="card__img">
+                          <img src="https://gvidon94.ru/email/blanchard/art-2.jpg" alt="Огюст Ренуар">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <h3 class="card__title" style="font-family: Arial, Helvetica, sans-serif">
+                            Огюст Ренуар
+                          </h3>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="card__descr" style="font-family: Arial, Helvetica, sans-serif">
+                            А также сделанные на базе интернет-аналитики выводы освещают чрезвычайно интересные
+                            особенности картины в целом.
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>
+                    <table class="card" cellpadding="0" cellspacing="0">
+                      <tr>
+                        <td class="card__img">
+                          <img src="https://gvidon94.ru/email/blanchard/art-3.jpg" alt="Клод Моне">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <h3 class="card__title" style="font-family: Arial, Helvetica, sans-serif">
+                            Клод Моне
+                          </h3>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="card__descr" style="font-family: Arial, Helvetica, sans-serif">
+                            Современная методология разработки однозначно фиксирует необходимость системы массового
+                            участия.
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>
+                    <table class="card" cellpadding="0" cellspacing="0">
+                      <tr>
+                        <td class="card__img">
+                          <img src="https://gvidon94.ru/email/blanchard/art-4.jpg" alt="Эдуард Мане">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <h3 class="card__title" style="font-family: Arial, Helvetica, sans-serif">
+                            Эдуард Мане
+                          </h3>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="card__descr" style="font-family: Arial, Helvetica, sans-serif">
+                            Но социально-экономическое развитие является качественно новой ступенью вывода текущих
+                            активов.
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>
+                    <table class="card" cellpadding="0" cellspacing="0">
+                      <tr>
+                        <td class="card__img">
+                          <img src="https://gvidon94.ru/email/blanchard/art-5.jpg" alt="Винсент Ван Гог">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <h3 class="card__title" style="font-family: Arial, Helvetica, sans-serif">
+                            Винсент Ван Гог
+                          </h3>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <p class="card__descr" style="font-family: Arial, Helvetica, sans-serif">
+                            Повседневная практика показывает, что разбавленное изрядной долей эмпатии, рациональное
+                            мышление требует анализа поставленных обществом задач.
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
                   </td>
                 </tr>
               </table>
