--- a/index.html
+++ b/index.html
@@ -106,6 +106,43 @@
       color: #fff;
     }
 
+    .footer {
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+
+    .footer__socials {
+      padding-top: 12px;
+      padding-bottom: 12px;
+    }
+
+    .copyright {
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 200%;
+      text-align: center;
+      color: #757575;
+    }
+
+    .refusial {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+
+    .refusial__text {
+      font-weight: 400;
+      font-size: 10px;
+      line-height: 240%;
+      text-align: center;
+      color: #757575;
+    }
+
+    .refusial__link {
+      text-decoration: underline;
+      text-decoration-skip-ink: none;
+      color: #9d5cd0;
+    }
+
     @media (max-width: 620px) {
       .table-600 {
         width: 280px !important;
@@ -141,12 +178,12 @@
   </div>
   <table cellpadding="0" cellspacing="0" class="table-600" width="600" bgcolor="#FFFFFF" align="center">
     <tr>
-      <td>
+      <td align="center">
 
         <table class="table-600" cellpadding="0" cellspacing="0" width="600">
           <tr>
             <td>
-              <table cellpadding="0" cellspacing="0">
+              <table class="table-600" cellpadding="0" cellspacing="0" width="600">
                 <tr>
                   <td class="header" align="center" bgcolor="#000000">
                     <img src="https://gvidon94.ru/email/blanchard/logo.svg" alt="Logo">
@@ -332,6 +369,72 @@
                             Повседневная практика показывает, что разбавленное изрядной долей эмпатии, рациональное
                             мышление требует анализа поставленных обществом задач.
                           </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <table class="table-600" cellpadding="0" cellspacing="0" width="600" bgcolor="#000000">
+                <tr>
+                  <td class="footer" align="center">
+                    <table class="table-250" cellpadding="0" cellspacing="0" width="250">
+                      <tr>
+                        <td class="footer__socials" align="center">
+                          <table width="145" cellpadding="0" cellspacing="0">
+                            <tr>
+                              <td align="left">
+                                <a href="#">
+                                  <img src="http://gvidon94.ru/email/blanchard/vk.svg" alt="VK">
+                                </a>
+                              </td>
+                              <td align="center">
+                                <a href="#">
+                                  <img src="http://gvidon94.ru/email/blanchard/instagram.svg" alt="Instagram">
+                                </a>
+                              </td>
+                              <td align="right">
+                                <a href="#">
+                                  <img src="http://gvidon94.ru/email/blanchard/fb.svg" alt="Facebook">
+                                </a>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div class="copyright" style="font-family: Arial, Helvetica, sans-serif">
+                            Blanchard &#169; 2024 / Все права защищены
+                          </div>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <tr>
+            <td align="center">
+              <table class="table-600" cellpadding="0" cellspacing="0" width="600" bgcolor="#EVEBEB">
+                <tr>
+                  <td class="refusial" align="center">
+                    <table cellpadding="0" cellspacing="0" width="250">
+                      <tr>
+                        <td align="center">
+                          <span class="refusial__text" style="font-family: Arial, Helvetica, sans-serif">
+                            Вы можете так же
+                            <a href="#" class="refusial__link" style="font-family: Arial, Helvetica, sans-serif">
+                              отписаться от рассылки
+                            </a>
+                          </span>
                         </td>
                       </tr>
                     </table>
