The advantages section is created

--- a/index.html
+++ b/index.html
@@ -106,6 +106,45 @@
       color: #fff;
     }
 
+    .advantages {
+      padding-top: 32px;
+      padding-bottom: 32px;
+    }
+
+    .advantages__title {
+      margin: 0;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+      color: #515151;
+    }
+
+    .advantages__list {
+      padding: 11px
+    }
+
+    .advantages__text {
+      padding-top: 11px;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 150%;
+      color: #515151;
+    }
+
+    .advantages__link {
+      display: block;
+      text-align: center;
+      border-radius: 48px;
+      margin-top: 34px;
+      padding-top: 17px;
+      padding-bottom: 17px;
+      text-decoration: none;
+      background-color: #9d5cd0;
+      font-weight: 700;
+      font-size: 14px;
+      color: #fff;
+    }
+
     .footer {
       padding-top: 15px;
       padding-bottom: 15px;
@@ -377,6 +416,93 @@
               </table>
             </td>
           </tr>
+
+          <tr>
+            <td class="advantages">
+              <table class="table-600" cellpadding="0" cellspacing="0" width="600">
+                <tr>
+                  <td align="center">
+                    <table class="table-520" cellpadding="0" cellspacing="0" width="520">
+                      <tr>
+                        <td>
+                          <h2 class="advantages__title" style="font-family: Arial, Helvetica, sans-serif">
+                            И это ещё не всё!
+                          </h2>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td class="advantages__list">
+                          <table class="table-520" cellpadding="0" cellspacing="0" width="520">
+                            <tr>
+                              <td align="left">
+                                <table width="140" cellpadding="0" cellspacing="0">
+                                  <tr>
+                                    <td>
+                                      <img src="https://gvidon94.ru/email/blanchard/check-square.svg" alt="Icon">
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td class="advantages__text" style="font-family: Arial, Helvetica, sans-serif">
+                                      Уникальные подборки работ с авторскими рецензиями
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                              <td align="center">
+                                <table width="140" cellpadding="0" cellspacing="0">
+                                  <tr>
+                                    <td>
+                                      <img src="https://gvidon94.ru/email/blanchard/calendar.svg" alt="Icon">
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td class="advantages__text" style="font-family: Arial, Helvetica, sans-serif">
+                                      Возможность настроить нашу рассылку под свой личный вкус
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                              <td align="right">
+                                <table width="140" cellpadding="0" cellspacing="0">
+                                  <tr>
+                                    <td>
+                                      <img src="https://gvidon94.ru/email/blanchard/arrow-up-circle.svg" alt="Icon">
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td class="advantages__text" style="font-family: Arial, Helvetica, sans-serif">
+                                      У вас есть пожелания и предложения?
+                                      Напишите нам в ответ на это письмо!
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td align="center">
+                          <table cellpadding="0" cellspacing="0" width="240">
+                            <tr>
+                              <td>
+                                <a href="#" class="advantages__link">
+                                  <span style="font-family: Arial, Helvetica, sans-serif">Узнать все подробности</span>
+                                </a>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
 
           <tr>
             <td>
